--- a/pages/recharge/recharge.html
+++ b/pages/recharge/recharge.html
@@ -47,29 +47,74 @@
                 <span>please select a top-up amount</span>
                 <div class="sy_retmins"></div>
             </div>
-            
         </div>
+
         <ul class="sy_rsul">
             <li class="sy_rsli">
                 <div class="sy_rslist">
                     <div class="sy_relitop">
-                        <p>500</p>
                         <div class="sy_reliminp"></div>
+                        <p>500</p>
                     </div>
                     <div class="sy_relibottom">
-                        <span>RMB : 5.00</span>
                         <div class="sy_relimins"></div>
+                        <span>RMB : 5.00</span>
                     </div>
                 </div>
-                <div class="sy_rslist"></div>
+                <div class="sy_rslist">
+                    <div class="sy_relitop">
+                        <div class="sy_reliminp"></div>
+                        <p>1000</p>
+                    </div>
+                    <div class="sy_relibottom">
+                        <div class="sy_relimins"></div>
+                        <span>RMB : 10.00</span>
+                    </div>
+                </div>
             </li>
             <li class="sy_rsli">
-                <div class="sy_rslist"></div>
-                <div class="sy_rslist"></div>
+                <div class="sy_rslist">
+                    <div class="sy_relitop">
+                        <div class="sy_reliminp"></div>
+                        <p>3000</p>
+                    </div>
+                    <div class="sy_relibottom">
+                        <div class="sy_relimins"></div>
+                        <span>RMB : 30.00</span>
+                    </div>
+                </div>
+                <div class="sy_rslist">
+                    <div class="sy_relitop">
+                        <div class="sy_reliminp"></div>
+                        <p>5000</p>
+                    </div>
+                    <div class="sy_relibottom">
+                        <div class="sy_relimins"></div>
+                        <span>RMB : 50.00</span>
+                    </div>
+                </div>
             </li>
             <li class="sy_rsli">
-                <div class="sy_rslist"></div>
-                <div class="sy_rslist"></div>
+                <div class="sy_rslist">
+                    <div class="sy_relitop">
+                        <div class="sy_reliminp"></div>
+                        <p>6000</p>
+                    </div>
+                    <div class="sy_relibottom">
+                        <div class="sy_relimins"></div>
+                        <span>RMB : 60.00</span>
+                    </div>
+                </div>
+                <div class="sy_rslist">
+                    <div class="sy_relitop">
+                        <div class="sy_reliminp"></div>
+                        <p>10000</p>
+                    </div>
+                    <div class="sy_relibottom">
+                        <div class="sy_relimins"></div>
+                        <span>RMB : 100.00</span>
+                    </div>
+                </div>
             </li>
         </ul>
     </div>
