--- a/directive/public/sheququanzi.html
+++ b/directive/public/sheququanzi.html
@@ -2,7 +2,7 @@
     <div class="ld_qz_contop">
         <img src="{{v.bgurl}}" alt="" />
         <div class="ld_qz_label">
-            <span><img src={{v.photourl}} alt="" /></span>
+            <span><a href="#/friend"><img src={{v.photourl}} alt="" /></a></span>
             <ul class="ld_qz_labelcon"><li>{{v.name}}</li><li class="ld_qz_labelzan"><i></i>{{v.love}}</li></ul>
         </div>
     </div>
