--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
     <link rel="stylesheet" type="text/css" href="pages/shujia/shujia.css" />
     <link rel="stylesheet" type="text/css" href="pages/shequ/shequ.css" />
     <link rel="stylesheet" type="text/css" href="pages/zhanghu/zhanghu.css" />
-    <link rel="stylesheet" type="text/css" href="pages/me/me.css" />
+
     <link rel="stylesheet" type="text/css" href="pages/show/show.css" />
     <link rel="stylesheet" type="text/css" href="pages/bookcover/bookcover.css" />
     <link rel="stylesheet" type="text/css" href="pages/friend/friend.css" />
+    <link rel="stylesheet" type="text/css" href="pages/me/me.css" />
     <link rel="stylesheet" type="text/css" href="pages/friendqun/friendqun.css" />
     <link rel="stylesheet" type="text/css" href="pages/addfriend/addfriend.css" />
     <link rel="stylesheet" type="text/css" href="pages/special/special.css" />
     <link rel="stylesheet" type="text/css" href="pages/search/yhp_searchfail/yhp_searchfail.css" />
     <link rel="stylesheet" type="text/css" href="pages/search/search.css" />
     <link rel="stylesheet" type="text/css" href="pages/comment/comment.css" />
+    <link rel="stylesheet" type="text/css" href="pages/zhanghu/yhp_bankcard/yhp_bankcard.css" />
 </head>
 <script type="text/javascript" src="js/angular.min.js"></script>
 <script type="text/javascript" src="js/angular-route.min.js"></script>
