--- a/pages/addfriend/addfriend.html
+++ b/pages/addfriend/addfriend.html
@@ -1,3 +1,5 @@
+<!-- 顶部栏 -->
+    <neiyetop title="新增好友" titleenglish="NEWFRIENDS" back="#/"></neiyetop>
 <!-- 好友群列表 -->
     <div class="ld_qundi" ng-controller="addfriend">
         <addfriendlis></addfriendlis>
