--- a/pages/bookcover/bookcover.html
+++ b/pages/bookcover/bookcover.html
@@ -1,4 +1,5 @@
-
+<!-- 顶部栏 -->
+<neiyetop title="书籍封面" titleenglish="Book Cooker" back="#/"></neiyetop>
     <div id="gl_warp" ng-repeat="v in bookcon track by $index">
     <!-- 内容以上 -->
         <div class="gl_top gl_clearfix">
