--- a/pages/comment/comment.html
+++ b/pages/comment/comment.html
@@ -1,6 +1,9 @@
-
+<!-- 顶部栏 -->
+<neiyetop title="评论" titleenglish="comment" back="#/bookcover"></neiyetop>
+<!-- 下面评论 -->
 <div class="commentdi">
     <!-- 评论页第一块 -->
     <sheququanzi ng-repeat="v in commentquanzi track by $index"></sheququanzi>
+    <!-- 评论下面列表 -->
     <commentlis></commentlis>
 </div>
