--- a/pages/friendqun/friendqun.html
+++ b/pages/friendqun/friendqun.html
@@ -1,3 +1,5 @@
+<!-- 顶部栏 -->
+    <neiyetop title="好友群" titleenglish="FRIEND ATREAM" back="#/"></neiyetop>
 <!-- 好友群列表 -->
     <div class="ld_qundi">
         <friendqunlis></friendqunlis>
