--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -1,11 +1,12 @@
 
     <!-- 头部 -->
-    <div class="mjh_header">
-        <a href="##" class="mjh_yhtx"><img src="images/mjh/sy-mjh_03.png" alt="" /></a>
-        <a href="##" class="mjh_logo"><img src="images/mjh/sy-mjh_05.png" alt="" /></a>
-        <a href="##" class="mjh_sousuo"><img src="images/mjh/sy-mjh_08.png" alt="" /></a>
+    <div class="ld_sqtopbar">
+        <i class="ld_sq_dian"></i>
+        <div class="ld_sq_photo"><a href="#/me"><img src="images/ld_images/ld_qz_photo.png" alt="" /></a></div>
+        <a href="#/" class="mjh_logo"><img src="images/mjh/sy-mjh_05.png" alt="" /></a>
+        <div class="ld_sq_rig"><a href="#/search"></a></div>
     </div>
-
+    <div class="ld_sqtopbar_di"></div>
     <!-- banner -->
     <indexbanner></indexbanner>
 
