--- a/pages/special/special.html
+++ b/pages/special/special.html
@@ -1,3 +1,5 @@
+<!-- 顶部栏 -->
+    <neiyetop title="特殊关心" titleenglish="SPECIAL CARD" back="#/"></neiyetop>
 <!-- 好友群列表 -->
     <div class="ld_qundi"  ng-controller="special">
         <speciallis></speciallis>
