--- a/pages/zhanghu/yhp_bankcard/yhp_bankcard.html
+++ b/pages/zhanghu/yhp_bankcard/yhp_bankcard.html
@@ -12,7 +12,7 @@
 <body>
 <!-- 添加银行卡外框开始 -->
 	<div class="yhp_bankcard_box">
-		<!-- 添加银行卡头部开始 -->
+		<!-- 添加银行卡头部开始
 			<div class="yhp_bankcard_up">
 				<label>
 					<button class="yhp_bankcard_back"></button>
@@ -25,7 +25,7 @@
 					<button class="yhp_bankcard_search"></button>
 				</label>
 			</div>
-		<!-- 密码支付头部结束 -->
+		密码支付头部结束 -->
 
 		<!-- 添加银行卡主体开始 -->
 		<div class="yhp_bankcard_bottom">
