--- a/pages/zhanghu/zhanghu.html
+++ b/pages/zhanghu/zhanghu.html
@@ -1,19 +1,8 @@
 
 <!-- 支付外框开始 -->
 	<div class="yhp_payment_box">
-	<!-- 支付头部开始 -->
-		<div class="yhp_payment_up">
-			<label>
-				<button class="yhp_payment_back"></button>
-			</label>
-			<div class="yhp_payment_title">
-				<p class="yhp_payment_titleup">支付方式</p>
-				<p class="yhp_payment_titlebot">BANKCARD</p>
-			</div>
-			<label>
-				<a href="#/search"><button class="yhp_payment_search"></button></a>
-			</label>
-		</div>
+	<!-- 顶部栏 -->
+    <neiyetop title="支付方式" titleenglish="BANKCARD" back="#/"></neiyetop>
 	<!-- 支付头部结束 -->
 
 	<!-- 支付主体开始 -->
