--- a/pages/friend/friend.html
+++ b/pages/friend/friend.html
@@ -1,11 +1,13 @@
 
 <!-- --沈阳个人主页页面开始-- -->
 <!-- 固定 -->
-    <div class="sy_fix">
-    	<div class="sy_fslide"><a href="#/shequ"></a></div>
-    	<div class="sy_fcenter">Park <b>Christ</b></div>
-    	<div class="sy_fslide"></div>
-    </div>
+    <!-- <div class="sy_fix">
+        <div class="sy_fslide"><a href="#/shequ"></a></div>
+        <div class="sy_fcenter">Park <b>Christ</b></div>
+        <div class="sy_fslide"></div>
+    </div> -->
+    <!-- 顶部栏 -->
+<neiyetop title="好友主页" titleenglish="Friend Page" back="#/"></neiyetop>
 <!-- banner 个人标签 -->
     <div class="sy_banner">
     	<div class="sy_delsan">
@@ -21,99 +23,100 @@
     </div>
 <!-- --好友主页 独立部分 开始-- -->
 <!-- 好友主页的轮播块 -->
-    <div class="sy_pluul_box swiper-container swiper-container-horizontal">
-        <div class="swiper-wrapper">
-            <ul class="sy_pluul swiper-slide">
-                <li class="sy_pluli">
-                    <div class="sy_pluli_img">
-                        <img src="images/sy_images/sy_mjh_1.png" alt="">
-                    </div>
-                    <div class="sy_pluli_right">
-                        <div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
-                        <p class="sy_pluli_p">收藏书籍</p>
-                        <span class="sy_san_dian">···</span>
-                    </div>
-                </li>
-                <li class="sy_pluli">
-                    <div class="sy_pluli_img">
-                        <img src="images/sy_images/sy_mjh_2.png" alt="">
-                    </div>
-                    <div class="sy_pluli_right">
-                        <div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
-                        <p class="sy_pluli_p">我的关注</p>
-                        <span class="sy_san_dian">···</span>
-                    </div>
-                </li>
-            </ul>    
-            <ul class="sy_pluul swiper-slide">
-                <li class="sy_pluli">
-                    <div class="sy_pluli_img">
-                        <img src="images/sy_images/sy_mjh_3.png" alt="">
-                    </div>
-                    <div class="sy_pluli_right">
-                        <div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
-                        <p class="sy_pluli_p">我的粉丝</p>
-                        <span class="sy_san_dian">···</span>
-                    </div>
-                </li>
-                <li class="sy_pluli">
-                    <div class="sy_pluli_img">
-                        <img src="images/sy_images/sy_mjh_4.png" alt="">
-                    </div>
-                    <div class="sy_pluli_right">
-                        <div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
-                        <p class="sy_pluli_p">我的动态</p>
-                        <span class="sy_san_dian">···</span>
-                    </div>
-                </li>
-            </ul>
-            <ul class="sy_pluul swiper-slide">
-                <li class="sy_pluli">
-                    <div class="sy_pluli_img">
-                        <img src="images/sy_images/sy_mjh_5.png" alt="">
-                    </div>
-                    <div class="sy_pluli_right">
-                        <div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
-                        <p class="sy_pluli_p">编辑设置</p>
-                        <span class="sy_san_dian">···</span>
-                    </div>
-                </li>
-                <li class="sy_pluli">
-                    <div class="sy_pluli_img">
-                        <img src="images/sy_images/sy_mjh_6.png" alt="">
-                    </div>
-                    <div class="sy_pluli_right">
-                        <div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
-                        <p class="sy_pluli_p">个性装扮</p>
-                        <span class="sy_san_dian">···</span>
-                    </div>
-                </li>
-            </ul>
-            <ul class="sy_pluul swiper-slide">
-                <li class="sy_pluli">
-                    <div class="sy_pluli_img">
-                        <img src="images/sy_images/sy_mjh_7.png" alt="">
-                    </div>
-                    <div class="sy_pluli_right">
-                        <div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
-                        <p class="sy_pluli_p">会员中心</p>
-                        <span class="sy_san_dian">···</span>
-                    </div>
-                </li>
-                <li class="sy_pluli">
-                    <div class="sy_pluli_img">
-                        <img src="images/sy_images/sy_mjh_8.png" alt="">
-                    </div>
-                    <div class="sy_pluli_right">
-                        <div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
-                        <p class="sy_pluli_p">消息通知</p>
-                        <span class="sy_san_dian">···</span>
-                    </div>
-                </li>
-            </ul>    
-        </div>
-        <div class="swiper-pagination"></div>
-    </div>
+<indexlunbo></indexlunbo>
+   <!--  <div class="sy_pluul_box swiper-container swiper-container-horizontal">
+       <div class="swiper-wrapper">
+           <ul class="sy_pluul swiper-slide">
+               <li class="sy_pluli">
+                   <div class="sy_pluli_img">
+                       <img src="images/sy_images/sy_mjh_1.png" alt="">
+                   </div>
+                   <div class="sy_pluli_right">
+                       <div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
+                       <p class="sy_pluli_p">收藏书籍</p>
+                       <span class="sy_san_dian">···</span>
+                   </div>
+               </li>
+               <li class="sy_pluli">
+                   <div class="sy_pluli_img">
+                       <img src="images/sy_images/sy_mjh_2.png" alt="">
+                   </div>
+                   <div class="sy_pluli_right">
+                       <div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
+                       <p class="sy_pluli_p">我的关注</p>
+                       <span class="sy_san_dian">···</span>
+                   </div>
+               </li>
+           </ul>    
+           <ul class="sy_pluul swiper-slide">
+               <li class="sy_pluli">
+                   <div class="sy_pluli_img">
+                       <img src="images/sy_images/sy_mjh_3.png" alt="">
+                   </div>
+                   <div class="sy_pluli_right">
+                       <div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
+                       <p class="sy_pluli_p">我的粉丝</p>
+                       <span class="sy_san_dian">···</span>
+                   </div>
+               </li>
+               <li class="sy_pluli">
+                   <div class="sy_pluli_img">
+                       <img src="images/sy_images/sy_mjh_4.png" alt="">
+                   </div>
+                   <div class="sy_pluli_right">
+                       <div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
+                       <p class="sy_pluli_p">我的动态</p>
+                       <span class="sy_san_dian">···</span>
+                   </div>
+               </li>
+           </ul>
+           <ul class="sy_pluul swiper-slide">
+               <li class="sy_pluli">
+                   <div class="sy_pluli_img">
+                       <img src="images/sy_images/sy_mjh_5.png" alt="">
+                   </div>
+                   <div class="sy_pluli_right">
+                       <div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
+                       <p class="sy_pluli_p">编辑设置</p>
+                       <span class="sy_san_dian">···</span>
+                   </div>
+               </li>
+               <li class="sy_pluli">
+                   <div class="sy_pluli_img">
+                       <img src="images/sy_images/sy_mjh_6.png" alt="">
+                   </div>
+                   <div class="sy_pluli_right">
+                       <div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
+                       <p class="sy_pluli_p">个性装扮</p>
+                       <span class="sy_san_dian">···</span>
+                   </div>
+               </li>
+           </ul>
+           <ul class="sy_pluul swiper-slide">
+               <li class="sy_pluli">
+                   <div class="sy_pluli_img">
+                       <img src="images/sy_images/sy_mjh_7.png" alt="">
+                   </div>
+                   <div class="sy_pluli_right">
+                       <div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
+                       <p class="sy_pluli_p">会员中心</p>
+                       <span class="sy_san_dian">···</span>
+                   </div>
+               </li>
+               <li class="sy_pluli">
+                   <div class="sy_pluli_img">
+                       <img src="images/sy_images/sy_mjh_8.png" alt="">
+                   </div>
+                   <div class="sy_pluli_right">
+                       <div class="sy_pluli_Word">Word<br>Litera<span>ture</span></div>
+                       <p class="sy_pluli_p">消息通知</p>
+                       <span class="sy_san_dian">···</span>
+                   </div>
+               </li>
+           </ul>    
+       </div>
+       <div class="swiper-pagination"></div>
+   </div> -->
 <!-- 最新动态 -->
     <div class="sy_news">
         <div class="sy_fcaption">
