--- a/pages/search/search.html
+++ b/pages/search/search.html
@@ -1,35 +1,9 @@
 
 <!-- --沈阳个人主页页面开始-- -->
 <!-- 固定 -->
-    <!-- <div class="sy_fix">
-        <div class="sy_fslide"></div>
-        <div class="sy_fcenter">Park <b>Christ</b></div>
-        <div class="sy_fslide"></div>
-    </div> -->
-    <!-- 搜索失败头部开始 -->
-        <div class="yhp_searchfail_up">
-            <label>
-                <button class="yhp_searchfail_back"></button>
-            </label>
-            <div class="yhp_searchfail_title">
-                <p class="yhp_searchfail_titleup">搜索</p>
-                <p class="yhp_searchfail_titlebot">SEARCH</p>
-            </div>
-            <label>
-                <button class="yhp_searchfail_search"></button>
-            </label>
-        </div>
-
+    <!-- 顶部栏 -->
+    <neiyetop title="搜索" titleenglish="SEATCH" back="#/"></neiyetop>
     <!-- 搜索失败头部结束 -->
-<!-- 留白块 -->
-    <!-- <div class="sy_empty"></div> -->
-<!-- 搜索 -->
-    <!-- <div class="ld_qz_condi">
-        <div class="ld_sy_search">
-            <form action=""><input type="text" placeholder="锦绣未央"/></form>
-            <div class="ld_sy_btn"></div>
-        </div>
-    </div> -->
     <div class="ld_search ld_searchactive">
             <div class="sy_qz_condi">
                 <div class="ld_sy_search">
