--- a/directive/public/neiyetop.html
+++ b/directive/public/neiyetop.html
@@ -1,7 +1,7 @@
 <!-- 内页top栏开始 -->
     <div class="yhp_bankcard_up">
         <label>
-            <button class="yhp_bankcard_back"><a href="{{back}}"></a></button>
+            <button class="yhp_bankcard_back" onclick="history.back()"><!-- <a href="{{back}}"></a> --></button>
         </label>
         <div class="yhp_bankcard_title">
             <p class="yhp_bankcard_titleup">{{title}}</p>
