--- a/pages/addcard/addcard.html
+++ b/pages/addcard/addcard.html
@@ -36,26 +36,26 @@
 <!-- 好友主页的轮播块 -->
     <div class="device">
         <div class="swiper-container">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide red-slide">
-              <div class="title">Slide 1</div>
+            <div class="swiper-wrapper">
+                <div class="swiper-slide red-slide">
+                    <img src="../../images/sy_images/sy_bankcard1.png" alt="">
+                </div>
+                <div class="swiper-slide blue-slide">
+                    <img src="../../images/sy_images/sy_bankcard2.png" alt="">
+                </div>
+                <div class="swiper-slide orange-slide">
+                    <img src="../../images/sy_images/sy_bankcard3.png" alt="">
+                </div>
+                <div class="swiper-slide blue-slide">
+                    <img src="../../images/sy_images/sy_bankcard4.png" alt="">
+                </div>
+                <div class="swiper-slide red-slide">
+                    <img src="../../images/sy_images/sy_bankcard5.png" alt="">
+                </div>
+                <div class="swiper-slide green-slide">
+                    <img src="../../images/sy_images/sy_bankcard6.png" alt="">
+                </div>
             </div>
-            <div class="swiper-slide blue-slide">
-              <div class="title">Slide 2</div>
-            </div>
-            <div class="swiper-slide orange-slide">
-              <div class="title">Slide 3</div>
-            </div>
-            <div class="swiper-slide blue-slide">
-              <div class="title">Slide 4</div>
-            </div>
-            <div class="swiper-slide red-slide">
-              <div class="title">Slide 5</div>
-            </div>
-            <div class="swiper-slide green-slide">
-              <div class="title">Slide 6</div>
-            </div>
-          </div>
         </div>
         <div class="pagination"></div>
     </div>
