--- a/directive/public/tongleituijian.html
+++ b/directive/public/tongleituijian.html
@@ -22,7 +22,7 @@
         <div class="gl_nnbottom">
             <p>{{v.contain}} </p>
             <div class="gl_zz"><a href="#/comment"></a></div>
-            <div class="gl_plpl"></div>
+            <div class="gl_plpl zlf_pl"></div>
         </div>
     </div>
 </li>
