--- a/pages/friend/friend.html
+++ b/pages/friend/friend.html
@@ -34,7 +34,7 @@
         </div>   
         </div>
         <div class="sy_news_content">
-            <ul class="sy_news_left">
+            <ul class="sy_news_left" synews>
                 <li class="sy_left_list active"></li>
                 <li class="sy_left_list"></li>
                 <li class="sy_left_list"></li>
