--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" >
-    <title>爱阅读app</title>
+    <title>心·阅</title>
     <link rel="stylesheet" type="text/css" href="css/swiper-3.4.0.min.css" />
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="css/public.css"/>
@@ -11,7 +11,6 @@
     <link rel="stylesheet" type="text/css" href="pages/shujia/shujia.css" />
     <link rel="stylesheet" type="text/css" href="pages/shequ/shequ.css" />
     <link rel="stylesheet" type="text/css" href="pages/zhanghu/zhanghu.css" />
-
     <link rel="stylesheet" type="text/css" href="pages/show/show.css" />
     <link rel="stylesheet" type="text/css" href="pages/bookcover/bookcover.css" />
     <link rel="stylesheet" type="text/css" href="pages/friend/friend.css" />
@@ -23,6 +22,10 @@
     <link rel="stylesheet" type="text/css" href="pages/search/search.css" />
     <link rel="stylesheet" type="text/css" href="pages/comment/comment.css" />
     <link rel="stylesheet" type="text/css" href="pages/zhanghu/yhp_bankcard/yhp_bankcard.css" />
+    <link rel="stylesheet" type="text/css" href="pages/me/recharge/recharge.css" />
+    <link rel="stylesheet" type="text/css" href="pages/me/yhp_permess/yhp_permess.css" />
+    <link rel="stylesheet" type="text/css" href="pages/me/yhp_member/yhp_member.css" />
+    <link rel="stylesheet" type="text/css" href="pages/show/mulu/mulu.css" />
 </head>
 <script type="text/javascript" src="js/angular.min.js"></script>
 <script type="text/javascript" src="js/angular-route.min.js"></script>
@@ -46,6 +49,9 @@
 <script type="text/javascript" src="pages/special/special.js"></script>
 <script type="text/javascript" src="pages/search/search.js"></script>
 <script type="text/javascript" src="pages/comment/comment.js"></script>
+<script type="text/javascript" src="pages/me/recharge/recharge.js"></script>
+<script type="text/javascript" src="pages/me/yhp_permess/yhp_permess.js"></script>
+<script type="text/javascript" src="pages/me/yhp_member/yhp_member.js"></script>
 
 
 
