--- a/pages/me/me.html
+++ b/pages/me/me.html
@@ -1,22 +1,8 @@
-<!-- 
- <!DOCTYPE html>
-<html lang="en" ng-app="app">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" >
-    <title>爱阅读app</title>
-    <link rel="stylesheet" type="text/css" href="../../css/swiper-3.4.0.min.css" />
-    <link rel="stylesheet" type="text/css" href="../../css/normalize.css" />
-    <link rel="stylesheet" type="text/css" href="../../css/public.css"/>
-    <link rel="stylesheet" type="text/css" href="../../css/index.css" />
-    <link rel="stylesheet" type="text/css" href="person.css" />
-</head>
-<body> -->
-    <!-- <div ng-view class="index_contain"></div> -->
+
 <!-- --沈阳个人主页页面开始-- -->
 <link rel="stylesheet" type="text/css" href="pages/me/me.css" />
 <!-- 顶部栏 -->
-<neiyetop title="个人中心" titleenglish="Personal Page" back="#/"></neiyetop>
+<neiyetop title="个人中心" titleenglish="Personal Page"></neiyetop>
 <!-- banner 个人标签 -->
     <div class="sy_banner">
         <div class="sy_delsan">
@@ -97,7 +83,7 @@
                 <p class="sy_set_bottom">现在充值阅读币送免费会员一周</p>
             </div>
             <div class="sy_setright">
-                <div class="sy_setrght_con"><a href="#/"><img src="images/sy_images/sy_item07.png" alt=""></a></div>
+                <div class="sy_setrght_con"><a href="#/recharge"><img src="images/sy_images/sy_item07.png" alt=""></a></div>
             </div>
         </li>
         <li class="sy_setting_li">
@@ -110,7 +96,7 @@
                 <p class="sy_set_bottom">编辑个人资料</p>
             </div>
             <div class="sy_setright">
-                <div class="sy_setrght_con"><a href="#"><img src="images/sy_images/sy_item07.png" alt=""></a>  </div>
+                <div class="sy_setrght_con"><a href="#/yhp_permess"><img src="images/sy_images/sy_item07.png" alt=""></a>  </div>
             </div>
         </li>
         <li class="sy_setting_li">
@@ -149,7 +135,7 @@
                 <p class="sy_set_bottom">会员畅销全部书籍，免费阅读</p>
             </div>
             <div class="sy_setright">
-                <div class="sy_setrght_con"> <img src="images/sy_images/sy_item07.png" alt=""> </div>
+                <div class="sy_setrght_con"> <a href="#/yhp_member"><img src="images/sy_images/sy_item07.png" alt=""></a> </div>
             </div>
         </li>
     </ul>
@@ -163,12 +149,3 @@
     </div>
 <!-- --沈阳个人主页页面结束-- -->
 <indextab></indextab>
-<!-- </body>
-</html>
-<script src="../../js/angular.min.js"></script>
-<script src="../../js/angular-route.min.js"></script>
-<script type="text/javascript" src="../../js/rem.js"></script>
-<script type="text/javascript" src="../../js/swiper-3.4.0.min.js"></script>
-<script type="text/javascript" src="../../js/zepto.js"></script>
-<script src="index.js"></script>
-<script src="person.js"></script> -->
