--- a/pages/me/yhp_member/yhp_member.html
+++ b/pages/me/yhp_member/yhp_member.html
@@ -1,31 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" >
-    <title>爱阅读app—会员中心</title>
-    <link rel="stylesheet" type="text/css" href="../../../css/swiper-3.4.0.min.css" />
-    <link rel="stylesheet" type="text/css" href="../../../css/normalize.css" />
-    <link rel="stylesheet" type="text/css" href="../../../css/public.css"/>
-    <link rel="stylesheet" type="text/css" href="yhp_member.css" />
-</head>
-<body>
+<neiyetop title="会员中心" titleenglish="MEMBER CENTER"></neiyetop>
 <!-- 会员中心外框开始 -->
 	<div class="yhp_member_box">
-	<!-- 会员中心头部开始 -->
-		<div class="yhp_member_up">
-			<label>
-				<button class="yhp_member_back"></button>
-			</label>
-			<div class="yhp_member_title">
-				<p class="yhp_member_titleup">会员中心</p>
-				<p class="yhp_member_titlebot">MEMBER CENTER</p>
-			</div>
-			<label>
-				<button class="yhp_member_finish">完成</button>
-			</label>
-		</div>
-	<!-- 会员中心头部结束 -->
 
 	<!-- 会员中心主体开始 -->
 		<div class="yhp_member_bottom">
@@ -76,11 +51,3 @@
 	<!-- 会员中心主体结束 -->
 	</div>
 <!-- 会员中心外框结束 -->
-</body>
-</html>
-<script src="../../../js/angular.min.js"></script>
-<script src="../../../js/angular-route.min.js"></script>
-<script type="text/javascript" src="../../../js/rem.js"></script>
-<script type="text/javascript"src="../../../js/swiper-3.4.0.min.js"></script>
-<script type="text/javascript" src="../../../js/zepto.js"></script>
-<script type="text/javascript" src="yhp_member.js"></script>
