--- a/pages/me/recharge/recharge.html
+++ b/pages/me/recharge/recharge.html
@@ -1,26 +1,13 @@
-<!DOCTYPE html>
-<html lang="en" ng-app="app">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" >
-    <title>爱阅读app</title>
-    <link rel="stylesheet" type="text/css" href="../../css/swiper-3.4.0.min.css" />
-    <link rel="stylesheet" type="text/css" href="../../css/normalize.css" />
-    <link rel="stylesheet" type="text/css" href="../../css/public.css"/>
-    <link rel="stylesheet" type="text/css" href="../../css/index.css" />
-    <link rel="stylesheet" type="text/css" href="recharge.css" />
-</head>
-<body>
-    <!-- <div ng-view class="index_contain"></div> -->
+
 <!-- --沈阳页面开始-- -->
 <!-- 固定 -->
-    <div class="sy_fix">
-    	<div class="sy_fslide"></div>
-    	<div class="sy_fcenter">Park <b>Christ</b></div>
-    	<div class="sy_fslide"></div>
-    </div>
-<!-- 留白块 -->
-    <div class="sy_empty"></div>
+   <!--  <div class="sy_fix">
+       <div class="sy_fslide"></div>
+       <div class="sy_fcenter">Park <b>Christ</b></div>
+       <div class="sy_fslide"></div>
+   </div> -->
+   <neiyetop title="充值中心" titleenglish="VOUCHER CENTER"></neiyetop>
+
 <!-- 剩余金额 -->
     <div class="sy_surplus">
         <div class="sy_surcenter">
@@ -136,15 +123,4 @@
         </div>
     </div>
 <!-- 底 -->
-    <div class="sy_bbottom"></div>
-
 <!-- --沈阳个人主页页面结束-- -->
-</body>
-</html>
-<script src="../../js/angular.min.js"></script>
-<script src="../../js/angular-route.min.js"></script>
-<script type="text/javascript" src="../../js/rem.js"></script>
-<script type="text/javascript" src="../../js/swiper-3.4.0.min.js"></script>
-<script type="text/javascript" src="../../js/zepto.js"></script>
-<script src="../../index.js"></script>
-<script src="recharge.js"></script>
