--- a/pages/me/yhp_permess/yhp_permess.html
+++ b/pages/me/yhp_permess/yhp_permess.html
@@ -1,32 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" >
-    <title>爱阅读app—编辑资料</title>
-    <link rel="stylesheet" type="text/css" href="../../../css/swiper-3.4.0.min.css" />
-    <link rel="stylesheet" type="text/css" href="../../../css/normalize.css" />
-    <link rel="stylesheet" type="text/css" href="../../../css/public.css"/>
-    <link rel="stylesheet" type="text/css" href="yhp_permess.css" />
-</head>
-<body>
+<neiyetop title="编辑资料" titleenglish="DATA EDITION"></neiyetop>
 <!-- 编辑资料外框开始 -->
 	<div class="yhp_permess_box">
-	<!-- 编辑资料头部开始 -->
-		<div class="yhp_permess_up">
-			<label>
-				<button class="yhp_permess_back"></button>
-			</label>
-			<div class="yhp_permess_title">
-				<p class="yhp_permess_titleup">编辑资料</p>
-				<p class="yhp_permess_titlebot">DATA EDITION</p>
-			</div>
-			<label>
-				<button class="yhp_permess_finish">完成</button>
-			</label>
-		</div>
-	<!-- 编辑资料头部结束 -->
-
 	<!-- 编辑资料主体开始 -->
 		<div class="yhp_permess_bottom">
 			<ul class="yhp_permess_inner">
@@ -52,11 +26,3 @@
 	<!-- 编辑资料主体结束 -->
 	</div>
 <!-- 编辑资料外框结束 -->
-</body>
-</html>
-<script src="../../../js/angular.min.js"></script>
-<script src="../../../js/angular-route.min.js"></script>
-<script type="text/javascript" src="../../../js/rem.js"></script>
-<script type="text/javascript"src="../../../js/swiper-3.4.0.min.js"></script>
-<script type="text/javascript" src="../../../js/zepto.js"></script>
-<script type="text/javascript" src="yhp_permess.js"></script>
