--- a/pages/show/mulu/mulu.html
+++ b/pages/show/mulu/mulu.html
@@ -4,64 +4,64 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" >
     <title>爱阅读app</title>
-    <link rel="stylesheet" type="text/css" href="../../css/normalize.css" />
-    <link rel="stylesheet" type="text/css" href="../../css/public.css"/>
+    <link rel="stylesheet" type="text/css" href="../../../css/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="../../../css/public.css"/>
     <link rel="stylesheet" type="text/css" href="mulu.css" />
 </head>
 <body>
     <!-- 目录 开始 -->
-    <ul class="zlf_ml_box" hidden>
+    <ul class="zlf_ml_box">
         <li class="zlf_ml_item">
             <span>第一章 </span>
             <span>小二上酒</span>
-            <img src="../../images/zlf_images/zlf_icon_06.png"/>
-            <img src="../../images/zlf_images/zlf_icon_03.png" />
+            <img src="../../../images/zlf_images/zlf_icon_06.png"/>
+            <img src="../../../images/zlf_images/zlf_icon_03.png" />
         </li>
         <li class="zlf_ml_item">
             <span>第二章 </span>
             <span>白狐儿脸</span>
-            <img src="../../images/zlf_images/zlf_icon_06.png"/>
-            <img src="../../images/zlf_images/zlf_icon_03.png" />
+            <img src="../../../images/zlf_images/zlf_icon_06.png"/>
+            <img src="../../../images/zlf_images/zlf_icon_03.png" />
         </li>
         <li class="zlf_ml_item">
             <span>第三章 </span>
             <span>两个酒窝</span>
-            <img src="../../images/zlf_images/zlf_icon_06.png"/>
-            <img src="../../images/zlf_images/zlf_icon_03.png" />
+            <img src="../../../images/zlf_images/zlf_icon_06.png"/>
+            <img src="../../../images/zlf_images/zlf_icon_03.png" />
         </li>
         <li class="zlf_ml_item">
             <span>第四章 </span>
             <span>去那山摘山楂</span>
-            <img src="../../images/zlf_images/zlf_icon_06.png"/>
-            <img src="../../images/zlf_images/zlf_icon_03.png" />
+            <img src="../../../images/zlf_images/zlf_icon_06.png"/>
+            <img src="../../../images/zlf_images/zlf_icon_03.png" />
         </li>
         <li class="zlf_ml_item">
             <span>第五章 </span>
             <span>天下第一美夫人</span>
-            <img src="../../images/zlf_images/zlf_icon_06.png"/>
-            <img src="../../images/zlf_images/zlf_icon_03.png" />
+            <img src="../../../images/zlf_images/zlf_icon_06.png"/>
+            <img src="../../../images/zlf_images/zlf_icon_03.png" />
         </li>
         <li class="zlf_ml_item">
             <span>第六章 </span>
             <span>走一个</span>
-            <img src="../../images/zlf_images/zlf_icon_06.png"/>
-            <img src="../../images/zlf_images/zlf_icon_03.png" />
+            <img src="../../../images/zlf_images/zlf_icon_06.png"/>
+            <img src="../../../images/zlf_images/zlf_icon_03.png" />
         </li>
         <li class="zlf_ml_item">
             <span>第七章 </span>
             <span>武媚娘望城头</span>
-            <img src="../../images/zlf_images/zlf_icon_06.png"/>
-            <img src="../../images/zlf_images/zlf_icon_03.png" />
+            <img src="../../../images/zlf_images/zlf_icon_06.png"/>
+            <img src="../../../images/zlf_images/zlf_icon_03.png" />
         </li>
         <li class="zlf_ml_item">
             <span>第八章 </span>
             <span>东魁</span>
-            <img src="../../images/zlf_images/zlf_icon_06.png"/>
+            <img src="../../../images/zlf_images/zlf_icon_06.png"/>
         </li>
         <li class="zlf_ml_item">
             <span>第九章 </span>
             <span>雪中刀</span>
-            <img src="../../images/zlf_images/zlf_icon_06.png"/>
+            <img src="../../../images/zlf_images/zlf_icon_06.png"/>
         </li>
         <li class="zlf_ml_item">
             <span>第十章 </span>
@@ -89,19 +89,6 @@
         </li>
     </ul>
     <!-- 目录 结束 -->
-    <!-- 书签开始 -->
-    <div class="zlf_sq_box">
-        <span class="zlf_sq">书签1</span>
-        <img class="zlf_sq_zs1" src="../../images/zlf_images/zlf_sq_03.png" alt="" />
-        <div class="zlf_sq_zs2">
-            <img src="../../images/zlf_images/zlf_sq_07.png" alt="" />
-        </div>
-        <p class="zlf_sq_con">
-            北凉王府龙盘虎踞于清凉山，千门万户，极土木之盛。作为王朝硕果仅存的异性王，在庙堂和江湖都是毁誉参半的北凉王徐骁作为...
-        </p>
-        <span class="zlf_sq_time">2017.01.02</span>
-    </div>
-    <!-- 书签 结束 -->
 </body>
-<script type="text/javascript" src="../../js/rem.js"></script>
+<script type="text/javascript" src="../../../js/rem.js"></script>
 </html>
