--- a/pages/me/me.html
+++ b/pages/me/me.html
@@ -7,7 +7,9 @@
     <div class="sy_banner">
         <div class="sy_delsan">
             <div class="sy_header_imgbox">
-                <div class="sy_header_img"></div>
+                <div class="sy_header_img">
+                    <img src="images/sy_images/sy_ld.jpg" alt="">
+                </div>
             </div>
         </div>
       <!-- 红心 -->
