--- a/directive/public/indexbanner.html
+++ b/directive/public/indexbanner.html
@@ -1,8 +1,10 @@
 <!-- 首页banner -->
 <div class="mjh_banner swiper-container swiper-container-horizontal">
     <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="images/mjh/sy-mjh_.png" alt="" /></div>
-        <div class="swiper-slide"><img src="images/mjh/sy-mjh_12.png" alt="" /></div>
+        <div class="swiper-slide"><img src="images/mjh/banner01.png" alt="" /></div>
+        <div class="swiper-slide"><img src="images/mjh/banner02.png" alt="" /></div>
+        <div class="swiper-slide"><img src="images/mjh/banner03.png" alt="" /></div>
+        <div class="swiper-slide"><img src="images/mjh/banner04.png" alt="" /></div>
     </div>
     <!-- Add Pagination -->
     <div class="swiper-pagination"></div>
