--- a/pages/login/zlf_zhuce/zhuce.html
+++ b/pages/login/zlf_zhuce/zhuce.html
@@ -54,7 +54,7 @@
                     <div class="mjh-srnk-d1"></div> 
                     <div class="mjh-srnk-d2"></div> 
 
-                    <div class="mjh-srnk-d3">密&nbsp&nbsp&nbsp&nbsp码</div>
+                    <div class="mjh-srnk-d3">密&nbsp;&nbsp;&nbsp;&nbsp;码</div>
                     <input type="password" class="mjh-srnk-d4 mjh-zck-mm1" required="required"  placeholder='请输入密码'/>
 
                     <img src="../../../images/mjh/mjh_zc_13.gif" alt="" class="mjh-srnk-d5" />
@@ -64,7 +64,7 @@
                     <div class="mjh-srnk-d1"></div> 
                     <div class="mjh-srnk-d2"></div> 
 
-                    <div class="mjh-srnk-d3">确&nbsp&nbsp&nbsp&nbsp认</div>
+                    <div class="mjh-srnk-d3">确&nbsp;&nbsp;&nbsp;&nbsp;认</div>
                     <input type="password" class="mjh-srnk-d4 mjh-zck-mm2" required="required"  placeholder='请再次输入密码'/>
 
                     <img src="../../../images/mjh/mjh_zc_13.gif" alt="" class="mjh-srnk-d5" />
@@ -173,7 +173,7 @@
                          <img src="../../../images/zlf_images/zlf_zc2_03.png" alt="" />
                          <p>
                              <input type="checkbox" class="xhlx" value="励志传奇2" />
-                             <span>励志传奇</span>
+                             <span>文艺随笔</span>
                          </p>
                      </div>
                  </div>
@@ -200,7 +200,7 @@
                          </div>
                          <p>
                              <input type="checkbox" class="mjh-xhzz" value="韩寒" />
-                             <span>韩寒</span>
+                             <span>郭敬明</span>
                          </p>
                      </div>
                      <div class="zlf_man zlf_like_author">
@@ -209,7 +209,7 @@
                          </div>
                          <p>
                              <input type="checkbox" class="mjh-xhzz" value="韩寒" />
-                             <span>韩寒</span>
+                             <span>三毛</span>
                          </p>
                      </div>
                      <div class="zlf_man zlf_like_author">
@@ -218,7 +218,7 @@
                          </div>
                          <p>
                              <input type="checkbox" class="mjh-xhzz" value="韩寒" />
-                             <span>韩寒</span>
+                             <span>秋水</span>
                          </p>
                      </div>
                  </div>
@@ -229,7 +229,7 @@
                          </div>
                          <p>
                              <input type="checkbox" class="mjh-xhzz" value="韩寒" />
-                             <span>韩寒</span>
+                             <span>孙宇</span>
                          </p>
                      </div>
                      <div class="zlf_man zlf_like_author">
@@ -238,7 +238,7 @@
                          </div>
                          <p>
                              <input type="checkbox" class="mjh-xhzz" value="韩寒" />
-                             <span>韩寒</span>
+                             <span>梁珂</span>
                          </p>
                      </div>
                      <div class="zlf_man zlf_like_author">
@@ -247,7 +247,7 @@
                          </div>
                          <p>
                              <input type="checkbox" class="mjh-xhzz" value="韩寒" />
-                             <span>韩寒</span>
+                             <span>有鹿</span>
                          </p>
                      </div>
                      <div class="zlf_man zlf_like_author">
@@ -256,7 +256,7 @@
                          </div>
                          <p>
                              <input type="checkbox" class="mjh-xhzz" value="韩寒" />
-                             <span>韩寒</span>
+                             <span>倪刃</span>
                          </p>
                      </div>
                  </div>
