--- a/pages/chat/chat.html
+++ b/pages/chat/chat.html
@@ -20,7 +20,10 @@
 				<div class="yhp_chat_pic">
 					<div class="yhp_pic_inner">
 						<div class="yhp_pic_bg">
-							<img src="../../images/yhp_images/yhp_pic.jpg" alt="">
+							<div class="yhp_pic_img">
+								<img src="../../images/yhp_images/yhp_pic.jpg" alt="">
+							</div>
+							
 						</div>
 						<div class="yhp_chat_nick">
 							<p class="yhp_nick_name">Park Christ</p>
@@ -39,7 +42,10 @@
 				<div class="yhp_chat_text">
 					<div class="yhp_chat_groupleft">
 						<div class="yhp_pic_bg">
-							<img src="../../images/yhp_images/yhp_pic.jpg" alt="">
+							<div class="yhp_pic_img">
+								<img src="../../images/yhp_images/yhp_pic.jpg" alt="">
+							</div>
+							
 						</div>
 						<img src="../../images/yhp_images/yhp_chat_iconleft.png" alt="" class="yhp_chat_icon">
 						<div class="yhp_chat_mess">
