--- a/pages/me/yhp_member/yhp_member.html
+++ b/pages/me/yhp_member/yhp_member.html
@@ -7,7 +7,9 @@
 			<div class="yhp_member_inner">
 				<div class="yhp_member_innerup">
 					<div class="yhp_innerup_bg">
-						<img src="../../../images/sy_images/sy_ld.jpg" alt="">
+						<div class="yhp_innerup_img">
+							<img src="../../../images/sy_images/sy_ld.jpg" alt="">
+						</div>
 					</div>
 					
 					<div class="yhp_innerup_text">
