--- a/pages/login/login-mjh/login_mjh.html
+++ b/pages/login/login-mjh/login_mjh.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1" >
-    <title>爱阅读app</title>
+    <title>心阅</title>
     <link rel="stylesheet" type="text/css" href="../../../css/swiper-3.4.0.min.css" />
     <link rel="stylesheet" type="text/css" href="../../../css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="../../../css/public.css"/>
