--- a/pages/bookcover/bookcover.html
+++ b/pages/bookcover/bookcover.html
@@ -29,23 +29,26 @@
         <!-- 按钮 -->
         <div class="gl_btnbox">
             <div class="gl_btn">
-                <div class="gl_ii gl_ii1"></div>
+                <!-- <div class="gl_ii gl_ii1"></div> -->
                 <div class="gl_eng">
                     <span class="gl_che">移动书架</span>
+                    <div class="gl_ii gl_ii1"></div>
                     <!-- <span class="gl_engl">TO REMOVE BOOK</span> -->
                 </div>
             </div>
             <div class="gl_btn">
-                <div class="gl_ii gl_ii2"></div>
+                <!-- <div class="gl_ii gl_ii2"></div> -->
                 <div class="gl_eng">
                     <span class="gl_che">查看目录</span>
+                    <div class="gl_ii gl_ii2"></div>
                     <!-- <span class="gl_engl">TO REMOVE BOOK</span> -->
                 </div>
             </div>
             <div class="gl_btn">
-                <div class="gl_ii gl_ii3"></div>
+                <!-- <div class="gl_ii gl_ii3"></div> -->
                 <div class="gl_eng">
                     <span class="gl_che">全本缓存</span>
+                    <div class="gl_ii gl_ii3"></div>
                     <!-- <span class="gl_engl">TO REMOVE BOOK</span> -->
                 </div>
             </div>
