--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 <script type="text/javascript" src="pages/me/recharge/recharge.js"></script>
 <script type="text/javascript" src="pages/me/yhp_permess/yhp_permess.js"></script>
 <script type="text/javascript" src="pages/me/yhp_member/yhp_member.js"></script>
+<script type="text/javascript" src="pages/show/mulu/mulu.js"></script>
+<script type="text/javascript" src="pages/show/mulu/shuqian.js"></script>
 
 
 
