--- a/pages/show/show.html
+++ b/pages/show/show.html
@@ -46,22 +46,22 @@
 			</div>
 			<div class="lrc_bb">
 				<div class="lrc_xtbiao">
-					<img src="images/lrc_images/lrc_ml.png" alt="">
-					<p>目录</p>
+					<a href="#/mulu"><img src="images/lrc_images/lrc_ml.png" alt=""><p>目录</p></a>
 				</div>
 				<div class="lrc_xtbiao">
+					<!-- <a href="#/mulu"></a> -->
 					<img src="images/lrc_images/lrc_yl.png" alt="">
 					<p>模式</p>
 				</div>
 				<div class="lrc_xtbiao">
-					<img src="images/lrc_images/lrc_sq.png" alt="">
-					<p>书签</p>
+					<a href="#/shuqian"><img src="images/lrc_images/lrc_sq.png" alt=""><p>书签</p></a>
 				</div>
 				<div class="lrc_xtbiao">
 					<img src="images/lrc_images/lrc_wjx.png" alt="">
 					<p>收藏</p>
 				</div>
 				<div class="lrc_xtbiao">
+					<!-- <a href="#/mulu"></a> -->
 					<img src="images/lrc_images/lrc_t.png" alt="">
 					<p>设置</p>
 				</div>
