--- a/pages/me/yhp_member/yhp_member.html
+++ b/pages/me/yhp_member/yhp_member.html
@@ -48,6 +48,13 @@
 					<p class="yhp_member_textword1">本VIP适用于蛀书虫APP阅读之间的用户使用，不可用于其它商业范围，蛀书虫对此VIP的使用和规则拥有解释权。
 					</p>
 				</div>
+				<div class="yhp_member_surebtn">
+					<div class="yhp_regsucbtn">
+						<label>
+							<button class="yhp_regsucsure">确定</button>
+						</label>
+					</div>
+				</div>
 			</div>
 		</div>
 	<!-- 会员中心主体结束 -->
