--- a/pages/me/yhp_permess/yhp_permess.html
+++ b/pages/me/yhp_permess/yhp_permess.html
@@ -22,6 +22,13 @@
 					<span>126</span>
 				</li>
 			</ul>
+			<div class="yhp_permess_surebtn">
+				<div class="yhp_regsucbtn">
+					<label>
+						<button class="yhp_regsucsure">确定</button>
+					</label>
+				</div>
+			</div>
 		</div>
 	<!-- 编辑资料主体结束 -->
 	</div>
