--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app="app">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" >
+    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,maximum-scale=1" >
     <title>心·阅</title>
     <link rel="stylesheet" type="text/css" href="css/swiper-3.4.0.min.css" />
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
