--- a/pages/me/me.html
+++ b/pages/me/me.html
@@ -111,7 +111,9 @@
                 <p class="sy_set_bottom">无线网情况下自动缓存收藏的书籍</p>
             </div>
             <div class="sy_setright">
-                <div class="sy_setrght_con" setwifi> <div class="sy_setrght_con_active"> </div> </div>
+                <div class="sy_setrght_con" setwifi> 
+                    <div class="sy_setrght_con_active"> </div> 
+                </div>
             </div>
         </li>
         <li class="sy_setting_li">
