--- a/pages/friend/friend.html
+++ b/pages/friend/friend.html
@@ -12,7 +12,9 @@
     <div class="sy_banner">
     	<div class="sy_delsan">
     		<div class="sy_header_imgbox">
-    			<div class="sy_header_img"></div>
+    			<div class="sy_header_img">
+                    <img src="../../images/sy_images/sy_ld.jpg" alt="">         
+                </div>
     		</div>
     	</div>
     </div>
@@ -45,7 +47,9 @@
                     <span>2016.12.12</span>
                 </div>
                 <div class="sy_right_box">
-                    <div class="sy_right_img"></div>
+                    <div class="sy_right_img">
+                        <img src="../../images/sy_images/sy_conbg.png" alt="">
+                    </div>
                     <div class="sy_right_content">
                         <h2>五人的酸甜苦辣</h2>
                         <p>公寓里的五个人，每个人都有自己的故事，互相遇见碰撞摩擦，发现彼此的优点，互相欣赏...</p>    
