--- a/pages/show/show.html
+++ b/pages/show/show.html
@@ -60,7 +60,7 @@
 					<img src="images/lrc_images/lrc_wjx.png" alt="">
 					<p>收藏</p>
 				</div>
-				<div class="lrc_xtbiao">
+				<div class="lrc_xtbiao zlf_set">
 					<!-- <a href="#/mulu"></a> -->
 					<img src="images/lrc_images/lrc_t.png" alt="">
 					<p>设置</p>
@@ -69,3 +69,6 @@
 		</div>
 	</div>
 	<!-- 详情页结束 -->
+	<!-- 小说内容格式设置外框开始 -->
+    <seting></seting>	
+    <div class="zlf_mask"></div>
