--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" type="text/css" href="pages/me/yhp_permess/yhp_permess.css" />
     <link rel="stylesheet" type="text/css" href="pages/me/yhp_member/yhp_member.css" />
     <link rel="stylesheet" type="text/css" href="pages/show/mulu/mulu.css" />
+    <link rel="stylesheet" type="text/css" href="pages/show/yhp_showset/yhp_showset.css" />
 </head>
 <script type="text/javascript" src="js/angular.min.js"></script>
 <script type="text/javascript" src="js/angular-route.min.js"></script>
@@ -54,6 +55,7 @@
 <script type="text/javascript" src="pages/me/yhp_member/yhp_member.js"></script>
 <script type="text/javascript" src="pages/show/mulu/mulu.js"></script>
 <script type="text/javascript" src="pages/show/mulu/shuqian.js"></script>
+<script type="text/javascript" src="pages/show/yhp_showset/yhp_showset.js"></script>
 
 
 
