--- a/directive/public/indextab.html
+++ b/directive/public/indextab.html
@@ -12,7 +12,7 @@
         <img src="images/mjh/sy-mjh_77.png" alt="" />
         <p>社区</p>
     </a>
-    <a href="#/zhanghu" class="mjh-sy-tabt">
+    <a href="#/me" class="mjh-sy-tabt">
         <img src="images/mjh/sy-mjh_80.png" alt="" />
         <p>账户</p>
     </a>
