--- a/pages/me/yhp_member/yhp_member.html
+++ b/pages/me/yhp_member/yhp_member.html
@@ -8,7 +8,7 @@
 				<div class="yhp_member_innerup">
 					<div class="yhp_innerup_bg">
 						<div class="yhp_innerup_img">
-							<img src="../../../images/sy_images/sy_ld.jpg" alt="">
+							<img src="images/sy_images/sy_ld.jpg" alt="">
 						</div>
 					</div>
 					
