--- a/pages/show/mulu/shuqian.html
+++ b/pages/show/mulu/shuqian.html
@@ -1,10 +1,11 @@
-
+<!-- 顶部栏 -->
+<neiyetop title="书签" titleenglish="BOOK MARK"></neiyetop>
     <!-- 书签开始 -->
     <div class="zlf_sq_box">
         <span class="zlf_sq">书签1</span>
-        <img class="zlf_sq_zs1" src="../../../images/zlf_images/zlf_sq_03.png" alt="" />
+        <img class="zlf_sq_zs1" src="images/zlf_images/zlf_sq_03.png" alt="" />
         <div class="zlf_sq_zs2">
-            <img src="../../../images/zlf_images/zlf_sq_07.png" alt="" />
+            <img src="images/zlf_images/zlf_sq_07.png" alt="" />
         </div>
         <p class="zlf_sq_con">
             北凉王府龙盘虎踞于清凉山，千门万户，极土木之盛。作为王朝硕果仅存的异性王，在庙堂和江湖都是毁誉参半的北凉王徐骁作为...
