--- a/pages/show/show.html
+++ b/pages/show/show.html
@@ -3,7 +3,7 @@
 	<div class="lrc_da">
 		<div class="lrc_top">
 			<div class="lrc_topleft">
-				<a href="#/bookcover"><img src="images/lrc_images/lrc_fh.gif" alt=""></a>
+				<a href="javascript:;" onclick="history.back()"><img src="images/lrc_images/lrc_fh.gif" alt=""></a>
 			</div>
 			<div class="lrc_topright">
 				<div class="lrc_huadong">
@@ -60,7 +60,7 @@
 					<img src="images/lrc_images/lrc_wjx.png" alt="">
 					<p>收藏</p>
 				</div>
-				<div class="lrc_xtbiao zlf_set">
+				<div class="lrc_xtbiao">
 					<!-- <a href="#/mulu"></a> -->
 					<img src="images/lrc_images/lrc_t.png" alt="">
 					<p>设置</p>
@@ -69,6 +69,3 @@
 		</div>
 	</div>
 	<!-- 详情页结束 -->
-	<!-- 小说内容格式设置外框开始 -->
-    <seting></seting>	
-    <div class="zlf_mask"></div>
