--- a/pages/comment/comment.html
+++ b/pages/comment/comment.html
@@ -1,5 +1,5 @@
 <!-- 顶部栏 -->
-<neiyetop title="评论" titleenglish="comment" back="#/bookcover"></neiyetop>
+<neiyetop title="评论" titleenglish="comment"></neiyetop>
 <!-- 下面评论 -->
 <div class="commentdi">
     <!-- 评论页第一块 -->
