--- a/pages/me/me.html
+++ b/pages/me/me.html
@@ -126,7 +126,7 @@
                 <p class="sy_set_bottom">清理缓存的章节，释放内存空间</p>
             </div>
             <div class="sy_setright">
-                <div class="sy_setrght_con"> <img src="images/sy_images/sy_item07.png" alt=""> </div>
+                <div class="sy_setrght_con"> <a  class="ld_huancun" href="javascript:;"><img src="images/sy_images/sy_item07.png" alt=""></a> </div>
             </div>
         </li>
         <li class="sy_setting_li">
@@ -153,3 +153,20 @@
     </div>
 <!-- --沈阳个人主页页面结束-- -->
 <indextab></indextab>
+<!-- 正在缓存 -->
+<link rel="stylesheet" type="text/css" href="pages/me/yhp_cache/yhp_cache.css" />
+<!-- 清理缓存外框开始 -->
+    <div class="yhp_cache_box">
+        <!-- 清理缓存內宽开始 -->
+            <div class="yhp_cache_inner">
+                <p class="yhp_cache_text">正在清理缓存请稍等</p>
+                <p class="yhp_cache_eng">
+                    IS CLEANING THE CACHE PLEASE WAIT A MOMENT
+                </p>
+                <div class="yhp_cachewave"></div>
+                <div class="yhp_cache_up"></div>
+                <p class="yhp_cache_title">正在努力打扫释放你的手机内存不要着急</p>
+            </div>
+        <!-- 清理缓存內宽结束 -->
+    </div>
+<!-- 登录界面失败结束 -->
