--- a/pages/me/yhp_cache/yhp_cache.html
+++ b/pages/me/yhp_cache/yhp_cache.html
@@ -1,15 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" >
-    <title>爱阅读app—正在清理缓存</title>
-    <link rel="stylesheet" type="text/css" href="../../../css/swiper-3.4.0.min.css" />
-    <link rel="stylesheet" type="text/css" href="../../../css/normalize.css" />
-    <link rel="stylesheet" type="text/css" href="../../../css/public.css"/>
-    <link rel="stylesheet" type="text/css" href="yhp_cache.css" />
-</head>
-<body>
+    <link rel="stylesheet" type="text/css" href="pages/me/yhp_cache/yhp_cache.css" />
 <!-- 清理缓存外框开始 -->
 	<div class="yhp_cache_box">
 		<!-- 清理缓存內宽开始 -->
@@ -25,12 +14,3 @@
 		<!-- 清理缓存內宽结束 -->
 	</div>
 <!-- 登录界面失败结束 -->
-</body>
-
-</html>
-<script src="../../../js/angular.min.js"></script>
-<script src="../../../js/angular-route.min.js"></script>
-<script type="text/javascript" src="../../../js/rem.js"></script>
-<script type="text/javascript"src="../../../js/swiper-3.4.0.min.js"></script>
-<script type="text/javascript" src="../../../js/zepto.js"></script>
-<script type="text/javascript" src="yhp_cache.js"></script>
