--- a/pages/show/mulu/mulu.html
+++ b/pages/show/mulu/mulu.html
@@ -1,57 +1,58 @@
-
+<!-- 顶部栏 -->
+<neiyetop title="目录" titleenglish="CATALOG"></neiyetop>
     <!-- 目录 开始 -->
     <ul class="zlf_ml_box">
         <li class="zlf_ml_item">
             <span>第一章 </span>
             <span>小二上酒</span>
-            <img src="../../../images/zlf_images/zlf_icon_06.png"/>
-            <img src="../../../images/zlf_images/zlf_icon_03.png" />
+            <img src="images/zlf_images/zlf_icon_06.png"/>
+            <img src="images/zlf_images/zlf_icon_03.png" />
         </li>
         <li class="zlf_ml_item">
             <span>第二章 </span>
             <span>白狐儿脸</span>
-            <img src="../../../images/zlf_images/zlf_icon_06.png"/>
-            <img src="../../../images/zlf_images/zlf_icon_03.png" />
+            <img src="images/zlf_images/zlf_icon_06.png"/>
+            <img src="images/zlf_images/zlf_icon_03.png" />
         </li>
         <li class="zlf_ml_item">
             <span>第三章 </span>
             <span>两个酒窝</span>
-            <img src="../../../images/zlf_images/zlf_icon_06.png"/>
-            <img src="../../../images/zlf_images/zlf_icon_03.png" />
+            <img src="images/zlf_images/zlf_icon_06.png"/>
+            <img src="images/zlf_images/zlf_icon_03.png" />
         </li>
         <li class="zlf_ml_item">
             <span>第四章 </span>
             <span>去那山摘山楂</span>
-            <img src="../../../images/zlf_images/zlf_icon_06.png"/>
-            <img src="../../../images/zlf_images/zlf_icon_03.png" />
+            <img src="images/zlf_images/zlf_icon_06.png"/>
+            <img src="images/zlf_images/zlf_icon_03.png" />
         </li>
         <li class="zlf_ml_item">
             <span>第五章 </span>
             <span>天下第一美夫人</span>
-            <img src="../../../images/zlf_images/zlf_icon_06.png"/>
-            <img src="../../../images/zlf_images/zlf_icon_03.png" />
+            <img src="images/zlf_images/zlf_icon_06.png"/>
+            <img src="images/zlf_images/zlf_icon_03.png" />
         </li>
         <li class="zlf_ml_item">
             <span>第六章 </span>
             <span>走一个</span>
-            <img src="../../../images/zlf_images/zlf_icon_06.png"/>
-            <img src="../../../images/zlf_images/zlf_icon_03.png" />
+            <img src="images/zlf_images/zlf_icon_06.png"/>
+            <img src="images/zlf_images/zlf_icon_03.png" />
         </li>
         <li class="zlf_ml_item">
             <span>第七章 </span>
             <span>武媚娘望城头</span>
-            <img src="../../../images/zlf_images/zlf_icon_06.png"/>
-            <img src="../../../images/zlf_images/zlf_icon_03.png" />
+            <img src="images/zlf_images/zlf_icon_06.png"/>
+            <img src="images/zlf_images/zlf_icon_03.png" />
         </li>
         <li class="zlf_ml_item">
             <span>第八章 </span>
             <span>东魁</span>
-            <img src="../../../images/zlf_images/zlf_icon_06.png"/>
+            <img src="images/zlf_images/zlf_icon_06.png"/>
         </li>
         <li class="zlf_ml_item">
             <span>第九章 </span>
             <span>雪中刀</span>
-            <img src="../../../images/zlf_images/zlf_icon_06.png"/>
+            <img src="images/zlf_images/zlf_icon_06.png"/>
         </li>
         <li class="zlf_ml_item">
             <span>第十章 </span>
