--- a/pages/login/login-mjh/login_mjh.html
+++ b/pages/login/login-mjh/login_mjh.html
@@ -57,7 +57,7 @@
             <!-- 用户选择 -->
             <div class="mjh-dl-yhxz" >
                 <a href="##" ng-repeat='v in bdyh track by $index' ng-click='yhdj(v)'>
-                    <div><img src="../../../images/yhp_images/yhp_loginheader.png" alt="" /></div>
+                    <div><img class="zlf_tx" src="../../../images/yhp_images/yhp_loginheader.png" alt="" /></div>
                     <p>{{v.yhm}}</p>
                 </a>
                 
