--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="pages/home/home.css" />
     <link rel="stylesheet" type="text/css" href="pages/shujia/shujia.css" />
     <link rel="stylesheet" type="text/css" href="pages/shequ/shequ.css" />
-    <link rel="stylesheet" type="text/css" href="pages/zhanghu/zhanghu.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="pages/pay/pay.css" /> -->
     <link rel="stylesheet" type="text/css" href="pages/show/show.css" />
     <link rel="stylesheet" type="text/css" href="pages/bookcover/bookcover.css" />
     <link rel="stylesheet" type="text/css" href="pages/friend/friend.css" />
@@ -21,12 +21,12 @@
     <link rel="stylesheet" type="text/css" href="pages/search/yhp_searchfail/yhp_searchfail.css" />
     <link rel="stylesheet" type="text/css" href="pages/search/search.css" />
     <link rel="stylesheet" type="text/css" href="pages/comment/comment.css" />
-    <link rel="stylesheet" type="text/css" href="pages/zhanghu/yhp_bankcard/yhp_bankcard.css" />
+    <link rel="stylesheet" type="text/css" href="pages/pay/yhp_bankcard/yhp_bankcard.css" />
     <link rel="stylesheet" type="text/css" href="pages/me/recharge/recharge.css" />
     <link rel="stylesheet" type="text/css" href="pages/me/yhp_permess/yhp_permess.css" />
     <link rel="stylesheet" type="text/css" href="pages/me/yhp_member/yhp_member.css" />
     <link rel="stylesheet" type="text/css" href="pages/show/mulu/mulu.css" />
-    <link rel="stylesheet" type="text/css" href="pages/show/yhp_showset/yhp_showset.css" />
+    <link rel="stylesheet" type="text/css" href="pages/chat/chat.css" />
 </head>
 <script type="text/javascript" src="js/angular.min.js"></script>
 <script type="text/javascript" src="js/angular-route.min.js"></script>
@@ -40,7 +40,7 @@
 <script type="text/javascript" src="pages/home/home.js"></script>
 <script type="text/javascript" src="pages/shujia/shujia.js"></script>
 <script type="text/javascript" src="pages/shequ/shequ.js"></script>
-<script type="text/javascript" src="pages/zhanghu/zhanghu.js"></script>
+<!-- <script type="text/javascript" src="pages/pay/pay.js"></script> -->
 <script type="text/javascript" src="pages/bookcover/bookcover.js"></script>
 <script type="text/javascript" src="pages/show/show.js"></script>
 <script type="text/javascript" src="pages/friend/friend.js"></script>
@@ -55,8 +55,8 @@
 <script type="text/javascript" src="pages/me/yhp_member/yhp_member.js"></script>
 <script type="text/javascript" src="pages/show/mulu/mulu.js"></script>
 <script type="text/javascript" src="pages/show/mulu/shuqian.js"></script>
-<script type="text/javascript" src="pages/me/yhp_cache/yhp_cache.js"></script>
 <script type="text/javascript" src="pages/show/yhp_showset/yhp_showset.js"></script>
+<script type="text/javascript" src="pages/chat/chat.js"></script>
 
 
 
