--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -30,7 +30,7 @@
 
     <!-- 书荒大解救 -->
     <!-- 标题 -->
-    <indextitle titleenglish="NEW WORK PUSH" icon="images/mjh/sy-mjh_50.png" title="书荒大解救" myhref="#"></indextitle>
+    <indextitle titleenglish="NEW WORK PUSH" icon="images/mjh/sy-mjh_50.png" title="书荒大解救" myhref="#/shujia"></indextitle>
     <div class="mjh-sh-wkw" ng-controller="home">
         <div class="mjh-sh-wk">
             <indexjiejiu></indexjiejiu>
@@ -39,7 +39,7 @@
 
     <!-- 新书速递 -->
     <!-- 标题 -->
-    <indextitle titleenglish="NEW WORK PUSH" icon="images/mjh/sy-mjh_69.png" title="新书速递" myhref="#"></indextitle>
+    <indextitle titleenglish="NEW WORK PUSH" icon="images/mjh/sy-mjh_69.png" title="新书速递" myhref="#/shujia"></indextitle>
     <div class="mjh-xs-wkw">
         <div class="mjh-xs-wk">
             <indexxinshu></indexxinshu>
