--- a/pages/search/search.html
+++ b/pages/search/search.html
@@ -49,57 +49,6 @@
             <div class="sy_su-div"><img src="images/sy_images/sy_xiaoren.png" alt="" class="sy_su-btt" /><span class="sy_sy-bth">搜索结果</span></div>
         </div>   
     </div>
-   <!--  <ul class="sy_line_ul">
-        <li class="sy_line_li">
-            <div class="sy_lines_left">
-                <div class="sy_line_lt"></div>
-            </div>
-            <div class="sy_lines_conbox">
-                <div class="sy_lines_contop">
-                    <p>庶女有毒之锦绣未央</p>
-                    <div class="sy_lines_english">
-                        <span>jinxiu not ended</span>
-                        <div class="sy_line_enright"></div>
-                    </div>
-                </div>
-                <div class="sy_lines_conbottom">
-                    <p>秦简 - 585章</p>
-                    <div class="sy_line_constars"></div>
-                </div>
-            </div>
-            <div class="sy_lines_right">
-                <div class="sy_liright_money">
-                    <img src="images/sy_images/sy_xin.png" alt="">
-                </div>
-            </div>
-            <div class="sy_line_border"></div>
-        </li>
-        <li class="sy_line_li">
-            <div class="sy_lines_left">
-                <div class="sy_line_lt"></div>
-            </div>
-            <div class="sy_lines_conbox">
-                <div class="sy_lines_contop">
-                    <p>庶女有毒之锦绣未央</p>
-                    <div class="sy_lines_english">
-                        <span>jinxiu not ended</span>
-                        <div class="sy_line_enright"></div>
-                    </div>
-                </div>
-                <div class="sy_lines_conbottom">
-                    <p>秦简 - 585章</p>
-                    <div class="sy_line_constars"></div>
-                </div>
-            </div>
-            <div class="sy_lines_right">
-                <div class="sy_liright_money">
-                    <img src="images/sy_images/sy_xin.png" alt="">
-                </div>
-            </div>
-            <div class="sy_line_border"></div>
-        </li>
-        
-    </ul> -->
     <!-- 同类推荐列表 -->
 <li class="ld_tuijian gl_clearfix" ng-repeat="v in ssjg track by $index">
     <div class="gl_nnleft">
@@ -135,7 +84,50 @@
         <p class="yhp_searchfail_bott">不如换个词再来试试吧...</p>
     </div>
 <!-- 搜索失败弹框结束 -->
-
+<!-- 推荐词开始 -->
+<div class="yhp_searchfail_titletjc">
+    <p class="yhp_searchfail_tjcen">RECOMMENDED KEYWORDS</p>
+    <p class="yhp_searchfail_tjccn">推荐关键词</p>
+    <div class="yhp_searchfail_tjc">
+        <label class="yhp_searchfail_tjclabel">
+            <input type="radio" class="yhp_searchfail_tjcinput" name="tjc">
+            小王子
+        </label>
+        <label class="yhp_searchfail_tjclabel">
+            <input type="radio" class="yhp_searchfail_tjcinput" name="tjc">
+            商业的秘密
+        </label>
+        <label class="yhp_searchfail_tjclabel">
+            <input type="radio" class="yhp_searchfail_tjcinput" name="tjc">
+            盗墓笔记
+        </label>
+        <label class="yhp_searchfail_tjclabel">
+            <input type="radio" class="yhp_searchfail_tjcinput" name="tjc">
+            夏至未至
+        </label>
+        <label class="yhp_searchfail_tjclabel">
+            <input type="radio" class="yhp_searchfail_tjcinput" name="tjc">
+            幻城
+        </label>
+        <label class="yhp_searchfail_tjclabel">
+            <input type="radio" class="yhp_searchfail_tjcinput" name="tjc">
+            透视之眼
+        </label>
+        <label class="yhp_searchfail_tjclabel">
+            <input type="radio" class="yhp_searchfail_tjcinput" name="tjc">
+            我是小普通
+        </label>
+        <label class="yhp_searchfail_tjclabel">
+            <input type="radio" class="yhp_searchfail_tjcinput" name="tjc">
+            女人的抉择
+        </label>
+        <label class="yhp_searchfail_tjclabel">
+            <input type="radio" class="yhp_searchfail_tjcinput" name="tjc">
+            银河护卫
+        </label>
+    </div>
+</div>
+<!-- 推荐词结束 -->
 <!-- 支付金额 -->
     <br>
     <br>
