--- a/pages/show/show.html
+++ b/pages/show/show.html
@@ -1,9 +1,10 @@
 
 	<!-- 详情页开始 -->
 	<div class="lrc_da">
+		<div class="ld_top"></div>
 		<div class="lrc_top">
 			<div class="lrc_topleft">
-				<a href="#/bookcover"><img src="images/lrc_images/lrc_fh.gif" alt=""></a>
+				<a href="javascript:;" onclick="history.back()"><img src="images/lrc_images/lrc_fh.gif" alt=""></a>
 			</div>
 			<div class="lrc_topright">
 				<div class="lrc_huadong">
