--- a/directive/public/seting.html
+++ b/directive/public/seting.html
@@ -1,3 +1,4 @@
+  <link rel="stylesheet" type="text/css" href="pages/show/yhp_showset/yhp_showset.css" />
     <!-- 小说内容格式设置外框开始 -->
     <div class="swiper-container zlf_swiper">
         <div class="swiper-wrapper">
