--- a/directive/public/shequfriend.html
+++ b/directive/public/shequfriend.html
@@ -5,10 +5,12 @@
                 <div class="ld_friend_inner"><img src="images/ld_images/ld_qz_photo.png" height="97" width="109" alt="" /></div>
             </a>
         </div>
-        <ul class="ld_friend_con">
-            <li class="ld_friend_tit">{{v.title}}·<b>{{v.title1}}</b><div class="ld_star"><span></span><span></span><span></span></div><i class="ld_vip"  ng-show="{{v.vipflag}}">vip</i></li>
-            <li>{{v.mes}}</li>
-            <li class="ld_friend_zs"><i></i><b>{{v.local}}</b>{{v.local1}}</li>
-        </ul>
+        <a href="#/chat" class="ld_friend_cona">
+            <ul class="ld_friend_con">
+                <li class="ld_friend_tit">{{v.title}}·<b>{{v.title1}}</b><div class="ld_star"><span></span><span></span><span></span></div><i class="ld_vip"  ng-show="{{v.vipflag}}">vip</i></li>
+                <li>{{v.mes}}</li>
+                <li class="ld_friend_zs"><i></i><b>{{v.local}}</b>{{v.local1}}</li>
+            </ul>
+        </a>
         <div ng-class="{true:'ld_firend_rig ld_firend_huise',false:'ld_firend_rig'}[{{v.iphone}}]"></div>
     </div>
