--- a/directive/public/shujiafind.html
+++ b/directive/public/shujiafind.html
@@ -2,7 +2,8 @@
 <div class="zlf_swiper-container">
     <div class="zlf_wrap">
         <div class="zlf_item" ng-repeat="v in shujiafind track by $index">
-            <div class="zlf_cover">
+            <a href="#/bookcover" class="ld_zlf_item">
+                <div class="zlf_cover">
                 <img class="zlf_book1" src="{{v.bg}}" alt="" />
                 头像
                 <div class="zlf_photo">
@@ -62,6 +63,8 @@
                    {{v.sum}}
                 </div>
             </div>
+            </a>
+            
         </div>
     </div>
 </div>
