--- a/pages/chat/chat.html
+++ b/pages/chat/chat.html
@@ -1,41 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" >
-    <title>爱阅读app——聊天</title>
-    <link rel="stylesheet" type="text/css" href="../../css/swiper-3.4.0.min.css" />
-    <link rel="stylesheet" type="text/css" href="../../css/normalize.css" />
-    <link rel="stylesheet" type="text/css" href="../../css/public.css"/>
-    <link rel="stylesheet" type="text/css" href="chat.css" />
-</head>
-<body>
+
 <!-- 聊天界面外框开始 -->
 	<div class="yhp_chat_box">
 		<!-- 聊天界面头部开始 -->
-			<header class="yhp_chat_header">
-				<label>
-					<button class="yhp_chat_backbtn"></button>
-				</label>
-				<div class="yhp_chat_pic">
-					<div class="yhp_pic_inner">
-						<div class="yhp_pic_bg">
-							<div class="yhp_pic_img">
-								<img src="../../images/yhp_images/yhp_pic.jpg" alt="">
-							</div>
-							
-						</div>
-						<div class="yhp_chat_nick">
-							<p class="yhp_nick_name">Park Christ</p>
-							<p class="yhp_nick_motto">两袖清风，一声剑来</p>
-						</div>
-						<img src="../../images/yhp_images/yhp_vip.png" alt="" class="yhp_chat_vip">
-					</div>
-				</div>
-				<label>
-					<button class="yhp_chat_barbtn"></button>
-				</label>
-			</header>
+			<neiyetop title="两袖清风，一声剑来" titleenglish="Park Christ"></neiyetop>
 		<!-- 聊天界面头部结束 -->
 		<!-- 聊天界面内容开始 -->
 			<div class="yhp_chat_inner">
@@ -43,11 +10,11 @@
 					<div class="yhp_chat_groupleft">
 						<div class="yhp_pic_bg">
 							<div class="yhp_pic_img">
-								<img src="../../images/yhp_images/yhp_pic.jpg" alt="">
+								<img src="images/yhp_images/yhp_pic.jpg" alt="">
 							</div>
 							
 						</div>
-						<img src="../../images/yhp_images/yhp_chat_iconleft.png" alt="" class="yhp_chat_icon">
+						<img src="images/yhp_images/yhp_chat_iconleft.png" alt="" class="yhp_chat_icon">
 						<div class="yhp_chat_mess">
 							<div class="yhp_chatmess_up">
 								<span class="yhp_messup_left">	Park Christ</span>
@@ -69,7 +36,7 @@
 								写的好棒啊！我推荐了，希望更多人可以看到。
 							</div>
 						</div>
-						<img src="../../images/yhp_images/yhp_chat_iconright.png" alt="" class="yhp_chat_icon">
+						<img src="images/yhp_images/yhp_chat_iconright.png" alt="" class="yhp_chat_icon">
 					</div>
 				</div>
 			</div>
@@ -102,11 +69,3 @@
 		<!-- 聊天界面底部结束 -->
 	</div>
 <!-- 聊天界面外框结束 -->
-</body>
-</html>
-<script src="../../js/angular.min.js"></script>
-<script src="../../js/angular-route.min.js"></script>
-<script type="text/javascript" src="../../js/rem.js"></script>
-<script type="text/javascript"src="../../js/swiper-3.4.0.min.js"></script>
-<script type="text/javascript" src="../../js/zepto.js"></script>
-<script type="text/javascript" src="chat.js"></script>
